<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RennSeri</string>
    <string name="intr">INTRO</string>
    <string name="Categories1">Open Wheel Racing</string>
    <string name="Categories2">Enclosed Wheel Racing</string>
    <string name="Categories3">Motorcycle Racing</string>
    <string name="Categories4">Air Racing</string>
    <string name="intro">PENGENALAN MOTORSPORT :</string>
    <string name="Category">KATEGORI :</string>
    <string name="f1">1. FORMULA 1</string>
    <string name="fe">2. FORMULA E</string>
    <string name="sf">3. SUPER FORMULA</string>
    <string name="ic">4. INDYCAR</string>
    <string name="f1ex">Formula One (F1) adalah kelas tertinggi dari open wheel racing ini yang diatur oleh FIA dan dimiliki oleh Formula One Group. Kata formula di Formula One mengacu pada peraturan dan regulasi yang harus diikuti semua peserta. F1 terdiri dari sejumlah seri balapan yang dikenal dengan istilah grand Prix. Balapan-balapan tersebut diselenggarakan dalam sirkuit atau jalan umum dalam kota yang ditutup untuk umum.</string>
    <string name="feex">Formula E merupakan sebuah open wheel racing yang hanya menggunakan mobil listrik. Kejuaraan ini dipromosikan dan dimiliki oleh Formula E Holdings. Kejuaraan ini pertama kali digagas pada tahun 2011 oleh Jean Todt, dan musim perdananya dimulai di Beijing, Tiongkok, pada bulan September 2014.</string>
    <string name="sfex">Super Formula, sebelumnya dikenal dengan Formula Nippon merupakan level tertinggi dari kelas open wheel racing di Jepang. Super Formula berkembang seri Formula 2000 jepang yang dimulai pada tahun 1973 di samping Formula 2 Jepang dan Formula 3000 Jepang. Di sebagian besar bidangnya, seri balap di Jepang mengikuti balap yang sejenis di Eropa dalam hal peraturan teknis, tapi dengan beberapa pengecualian penting.</string>
    <string name="icex">IndyCar Series adalah kelas utama dari open wheel racing khas Amerika Serikat. Kejuaraan ini pada awalnya bernama Indy Racing League (IRL). Kejuaraan ini didirikan oleh pemilik Indianapolis Motor Speedway Tony George yang dimulai pada tahun 1996 sebagai pesaing untuk Championship Auto Racing Teams (CART) dengan prinsip utama yaitu memperbaiki kekurangan-kekurangan dari CART.</string>
    <string name="ewr">Enclosed wheel racing adalah bentuk ajang lomba balap yang menggunakan mobil dengan roda tertutup, di mana roda terutama tertutup di dalam bodi kendaraan. Mobil ini biasanya memiliki dua kursi dan menggunakan mobil yang hampir mirip dengan mobil jalan raya biasa.</string>
    <string name="nas">1. STOCK CAR RACING</string>
    <string name="spo">2. SPORT CAR RACING</string>
    <string name="tor">3. TOURING CAR RACING</string>
    <string name="wrc">4. WORLD RALLY CHAMPIONSHIP</string>
    <string name="nasex">Stock car racing adalah sebuah cabang dari balap mobil yang biasa ditemukan di Amerika Serikat, Kanada, Selandia Baru, Inggris, dan Brazil. Secara tradisional stock car racing diadakan di sebuah sirkuit oval yang memiliki panjang antara 0,4 sampai 4,3 km. National Association for Stock Car Auto Racing (NASCAR) sampai saat ini merupakan badan penyelenggara terbesar dari stock car racing.</string>
    <string name="spoex">Sport car racing adalah bentuk balap jalan raya yang memanfaatkan mobil sport yang memiliki dua kursi dan roda tertutup. Sport car racing mungkin dibuat secara khusus atau terkait dengan model mobil jalan raya. Secara garis besar, sport car racing merupakan salah satu jenis utama dari balap mobil sirkuit berdampingan dengan open wheel racing.</string>
    <string name="torex" tools:ignore="Typos">Touring car racing adalah kompetisi balap mobil dengan mobil jalan raya yang telah dimodifikasi. Balapan ini populer di Argentina, Australia, Brazil, Inggris, Jerman, Swedia, dan Norwegia. Meski tidak secepat mobil F1, kesamaan mobil keduanya antara lain membuat kendaraan yang sesuai peraturan dan regulasi agar membuat sebuah balapan yang menghibur dan didukung dengan baik.</string>
    <string name="wrcex">World Rally Championship (WRC) merupakan seri balapan reli yang diorganisasikan oleh FIA, dan merupakan kejuaraan reli tertinggi di dunia. Kejuaraan pembalap dan kejuaraan manufaktur berdasarkan kejuaraan terpisah, tetapi sistem pemberian poinnya sama. Kejuaraan ini didirikan pada tahun 1973, dan kejuaraan untuk pembalap dimulai pada tahun 1979.</string>
    <string name="mc">Motorcycle racing adalah olahraga otomotif yang menggunakan sepeda motor. motorcycle racing bisa dibagi menjadi dua kategori, yaitu disiplin jalan aspal dan off-road.</string>
    <string name="moto">1. MOTOGP</string>
    <string name="mote">2. MOTO E</string>
    <string name="wsbk">3. WORLD SUPERBIKE</string>
    <string name="mx">4. MOTOCROSS</string>
    <string name="motoex">MotoGP adalah kelas utama dari seri balapan Grand Prix Sepeda Motor. Dulunya kelas ini dikenal dengan nama kelas 500cc atau GP500 yang pertama kali digelar pada tahun 1949. Adapun kelas MotoGP pada awalnya bermula dari perubahan regulasi untuk kelas 500cc di tahun 2002. Musim 2002 menjadi tahun terakhir untuk mesin 500cc 2-tak yang diperlombakan dalam kompetisi kelas premier.</string>
    <string name="motoeex">Moto E adalah kelas balap motor yang hanya menggunakan sepeda motor bertenaga listrik. Seri ini disetujui oleh FIM dan musim perdananya berlangsung pada tahun 2019 dan hanya lima sirkuit benua eropa saja.</string>
    <string name="wsbkex">World Superbike (WSBK) merupakan kejuaraan utama balap motor superbike di dunia. Kejuaraan ini dimulai pada tahun 1988. Satu musim SBK terdiri dari rangkaian ronde yang diadakan di fasilitas balap permanen, setiap ronde terdiri dari dua kali balapan. Sepeda motor yang digunakan di WSBK ini merupakan sepeda motor yang tersedia di pasaran, yang dimodifikasi. Berbeda dengan MotoGP yang menggunakan sepeda motor yang dibuat secara khusus untuk para awam balap motor.</string>
    <string name="mxex">Motocross adalah bentuk kejuaraan balap motor yang digelar di sirkuit tanah. Olahraga ini berevolusi dari kompetisi uji coba sepeda motor di Inggris. Pada awalnya ajang Motocross bermula dari sebuah kompetisi uji coba, seperti uji coba kuartalan Auto-Cycle Clubs di tahun 1909 dan Scottish Six Days Trial di tahun 1912. Akan tetapi lambat laun event uji coba ini justru menjadi sebuah kompetisi untuk mencari siapa yang tercepat menyentuh garis finis.</string>
    <string name="air">Air Racing adalah jenis olahraga motor yang melibatkan pesawat terbang atau jenis pesawat lain yang bersaing di jalur tetap, dengan pemenangnya mengembalikan waktu tersingkat, yang menyelesaikannya dengan poin terbanyak, atau yang paling dekat dengan perkiraan waktu sebelumnya.</string>
    <string name="rbair">1. RED BULL AIR RACING</string>
    <string name="f1air">2. FORMULA ONE AIR RACING</string>
    <string name="f1e">3. AIR RACE E</string>
    <string name="aero">4. AERO GP</string>
    <string name="rbex">Red Bull Air Race, didirikan pada tahun 2003 dan dibuat oleh Red Bull GmbH, adalah seri balapan udara internasional di mana para pesaing harus menavigasi rintangan yang menantang dalam waktu tercepat. Pilot terbang secara individual melawan waktu dan harus menyelesaikan putaran yang ketat melalui jalur slalom yang terdiri dari tiang, yang dikenal sebagai "Air Gates".</string>
    <string name="f1arex">Formula One Air Racing adalah motorsport Amerika yang melibatkan pesawat kecil menggunakan mesin hingga 200 inci kubik dalam perpindahan. Pembalap dapat mencapai kecepatan lebih dari 200 mph. Balap udara Formula Satu disetujui oleh Federasi Penerbangan Internasional. Formula Satu pertama kali diusulkan pada tahun 1936 sebagai "balap cebol". Spesifikasi 190 Cubic ditetapkan pada tahun 1946, dan kompetisi pertama ditetapkan pada tahun 1947.</string>
    <string name="f1eex">Air Race E World Cup (juga dikenal sebagai Air Race E) adalah kejuaraan balap udara yang direncanakan sesuai dengan aturan Formula One Racing dan diadaptasi untuk pesawat listrik murni. Peserta akan merancang dan membangun pesawat listrik untuk ambil bagian dalam balapan, terbang dalam kelompok 8 orang di sekitar lintasan oval 5 km yang ditandai dengan "tiang" dengan kecepatan lebih dari 250 mph. Seri ini diharapkan akan berlangsung pada tahun 2020 dan didukung oleh Airbus, yang menandatangani sebagai mitra pendiri pada Februari 2019.</string>
    <string name="aegex">Aero GP adalah seri balap udara internasional dengan hingga delapan pesawat sport berperforma tinggi yang dirancang khusus, semuanya berpacu dengan kecepatan hingga 250 mph di sirkuit yang ketat hanya beberapa meter dari tanah dan dari satu sama lain. Pilot yang bersaing adalah pilot militer dan sipil dari seluruh dunia. Aero GP adalah satu-satunya acara televisi internasional di mana pesawat terbang secara bersamaan. Aero GP resmi dimulai pada 2005 di Slovenia. Dari sana telah melakukan perjalanan ke beberapa negara di Eropa dan Timur Tengah. Alih-alih pola bendera yang diperiksa, Aero GP menilai pesertanya berdasarkan poin yang dimenangkan dalam acara individu, dan karenanya, tidak ada pemenang yang jelas sampai akhir.</string>
    <string name="fia">Fédération Internationale de l\'Automobile, atau disingkat FIA, adalah asosiasi non-profit yang didirikan pada 20 Juni 1904 yang mewakili kepentingan individu dan organisasi otomotif. FIA lebih dikenal sebagai badan yang membawahi kegiatan olahraga balap kendaraan bermotor. Sejak 1922, FIA telah mendelegasikan pengorganisasian balap kendaraan bermotor ke CSI (Commission Sportive Internationale), sebuah komite otonom yang kemudian menjadi FISA (Fédération Internationale du Sport Automobile). Restrukturisasi FIA pada 1993 mengakibatkan ditutupnya FISA, dengan demikian menempatkan kembali kegiatan lomba balap kendaraan bermotor di bawah manajemen FIA.</string>
    <string name="fim">Fédération Internationale de Motocyclisme atau biasa disingkat FIM adalah sebuah organisasi internasional di bidang olahraga sepeda motor. FIM beranggotakan 112 federasi sepeda motor nasional yang dibagi dalam enam wilayah benua. Ada enam jenis balapan yang dibina FIM, dan mencakup 65 kejuaraan dunia: balap jalanan, motocross (termasuk snowcross) trial, enduro, reli, dan balap trek. FIM juga terlibat dalam kegiatan nonbalapan yang memperkenalkan olahraga tersebut, keselamatannya, dan juga kebijakan publik. FIM juga menjadi federasi olahraga internasional pertama yang membuat suatu Peraturan Lingkungan tahun 1994. Tahun 2007, Komisi untuk Wanita dalam Olahraga Motor dibentuk FIM untuk mempromosikan olahraga roda dua untuk wanita.</string>
    <string name="fai">Fédération Aéronautique Internationale (FAI) adalah badan pengatur dunia untuk olahraga udara, dan juga mengatur definisi tentang penerbangan luar angkasa manusia. Perusahaan ini didirikan pada 14 Oktober 1905 dan berkantor pusat di Lausanne, Swiss. Ini mempertahankan rekor dunia untuk kegiatan penerbangan, termasuk balon, aeromodelling, dan kendaraan udara tak berawak (drone), serta penerbangan ke luar angkasa.</string>
    <string name="owr">Open wheel racing merupakan salah satu jenis balapan yang menggunakan mobil dengan roda yang terbuka, dalam artian tidak tertutup oleh bodi mobil. Mobil ini biasanya memiliki satu kursi. Mobil roda terbuka memiliki perbedaan mencolok dengan mobil jalan raya yang memiliki roda yang tertutup oleh bodi mobil. Mobil roda terbuka identik dengan mobil balap karena memang biasanya hanya dipakai untuk ajang balapan.</string>
</resources>