<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@color/grey"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:src="@drawable/top" />

    <TextView
        android:id="@+id/intr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp"
        android:text="@string/intro"
        android:textSize="15dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/intro"
        android:text="@string/intr"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:onClick="Intro"
        android:layout_below="@id/intr"
        android:layout_marginTop="3dp"

        android:backgroundTint="@color/black"/>

    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/intro"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/owr"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/category"
        android:layout_marginTop="2dp"
        android:onClick="Ow"
        android:text="@string/Categories1"
        android:backgroundTint="@color/black"/>

    <Button
        android:id="@+id/ewr"
        android:text="@string/Categories2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/owr"
        android:onClick="Er"
        android:backgroundTint="@color/black"/>

    <Button
        android:id="@+id/mr"
        android:text="@string/Categories3"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/ewr"
        android:onClick="Mc"
        android:backgroundTint="@color/black"/>

    <Button
        android:text="@string/Categories4"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/mr"
        android:onClick="air"
        android:backgroundTint="@color/black"/>
</RelativeLayout>