<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenWheel"
    android:background="@color/grey"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:src="@drawable/top"
        tools:ignore="ContentDescription"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/Categories4"
                android:layout_gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:text="@string/air"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:text="@string/rbair"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="240dp"
                android:src="@drawable/rbair"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:text="@string/rbex"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:text="@string/f1air"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="240dp"
                android:src="@drawable/f1air"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:text="@string/f1arex"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:text="@string/f1e"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="240dp"
                android:src="@drawable/f1e"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:text="@string/f1eex"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:text="@string/aero"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="240dp"
                android:src="@drawable/aero"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:text="@string/aegex"
                android:textColor="@color/black"
                android:textSize="15sp"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>