<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenWheel"
    android:background="@color/grey"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:src="@drawable/top"
        tools:ignore="ContentDescription"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/owr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/Categories1"
                android:layout_gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/owr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:text="@string/owr"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:text="@string/f1"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="240dp"
                android:src="@drawable/f1"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:text="@string/f1ex"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:text="@string/fe"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="240dp"
                android:src="@drawable/fe"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:text="@string/feex"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:text="@string/sf"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="240dp"
                android:src="@drawable/sf"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:text="@string/sfex"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                android:text="@string/ic"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <ImageView
                android:layout_width="320dp"
                android:layout_height="240dp"
                android:src="@drawable/ic"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:text="@string/icex"
                android:textColor="@color/black"
                android:textSize="15sp"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>